# infra-templates

./: .env  .env_sample  Dockerfile  Dockerfile-base  Dockerfile-base-3.10  Dockerfile-base-3.11  Makefile  README.md  docker-compose.yaml  pyproject.toml  readme.md
src/: azcache.py  base.py  description.py  locations  main.py  models.py  validators.py  version.py  vm_list
src/azure/: validators.py
src/bash/: validators.py
src/defaults/: azure.py
src/templates/ansible/: dataverse-docker.yml
src/templates/azure/: main.tf  outputs.tf  providers.tf  variables.tf
src/templates/bash/: monkeytest.sh  placeholder.sh
src/templates/cloudinit/: docker-dataverse.yml  download-files.yml
src/tests/: test_infratemplates.py  test_worldengine.py
