[tool.poetry]
name = "infra_templates"
version = "0.1.0"
description = "Release the infra templates!"
authors = ["Thomas van Erven"]

[tool.poetry.dependencies]
python = "^3.11.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
fastapi = {extras = ["all"], version = "^0.95.0"}
pytest = "^7.1.3"
requests = "^2.28.1"
dynaconf = "^3.1.11"
jinja2 = "^3.1.2"
httpx = "^0.24.1"
python-multipart = "^0.0.6"
fastapi-class = "^3.3.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
